<resources>
    <string name="app_name">SamsungProject</string>
    <string name="frontHairTabButtonText">Front Hair</string>
    <string name="eyesTabButtonText">Eyes</string>
    <string name="topTabButtonText">Top</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browsTabButtonText">Brows</string>
    <string name="mouthTabButtonText">Mouth</string>
    <string name="bottomTabButtonText">Bottom</string>
    <string name="backHairTabButtonText">Back Hair</string>
    <string name="socksTabButtonText">Socks</string>
    <string name="shoesTabButtonText">Shoes</string>
</resources>